<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:id="@+id/imageView1"
            android:background="#999"
            android:contentDescription="@string/hotel">
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="#A00"
            android:layout_gravity="top|start"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_74"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_night"
                android:textColor="#FFF"
                android:textSize="13sp">
            </TextView>
        </LinearLayout>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_beach_is_but_a_short_walk_away"
                android:textSize="24sp"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:layout_margin="16dp"
                android:gravity="center">
            </TextView>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9C27B0"
        android:text="@string/book_now">
    </Button>
</LinearLayout>